Soukaina Chouyoukh commit

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+details[open] summary:after {
+    content: " ▼";
+}
